--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
